# traceroute-for-android

./: build.gradle  readme.md  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
traceroute-for-android/: build.gradle
traceroute-for-android/src/main/jni/: CMakeLists.txt
traceroute-for-android/src/main/jni/traceroute/: mod-tcp.c  mod-tcpconn.c  traceroute.c
